# reactflow-neo4j

./: .gitignore  README.md  package-lock.json  package.json
Client/: package-lock.json  package.json  tsconfig.json
Client/src/: App.tsx  custom-reactflow.css  index.css  input.json
Client/src/components/canvas/: Canvas.tsx  index.ts  types.ts
Client/src/components/edges/: CustomLabeledEdge.tsx  index.ts
Client/src/components/nodes/: AttributeEditor.tsx  CustomNode.tsx  NodeEditor.tsx  NodeHandles.tsx  NodeTypeEditor.tsx  NodeViewer.tsx  index.ts  types.ts  useNodeEditor.ts
Client/src/components/panel/: AddNodeButton.tsx  FlowPanel.tsx  (+4 more)
Client/src/contexts/: PromptContext.tsx
Client/src/data/: idGenerator.ts  initialFlowData.ts
Client/src/hooks/: useDeletionOperations.ts  useEdgeOperations.ts  useNodeCreator.ts  usePrompt.ts
Server/: .gitignore  main.py  pyproject.toml
Server/database/: database.py
Server/gql/: __init__.py  resolvers.py  schemas.py
api/: api.py  data.json  main.py  pyproject.toml  schema.py
api/database/: __init__.py  database.py
api/gql/: __init__.py  gql.py  reference.txt  resolvers.py  schemas.py
src/: App.tsx
src/components/: DynamicNode.tsx  OnRestore.tsx  OnSave.tsx
src/components/canvas/: Canvas.tsx
src/components/edges/: CustomLabeledEdge.tsx
src/components/nodes/: DynamicNode.css  NodeEditor.tsx  NodeHandles.tsx  NodeTypeEditor.tsx
src/components/panel/: SaveButton.tsx
src/config/: config.js
src/gql/: client.js  queries.js
src/hooks/: useDeleteKeyboard.ts  useDeletionOperations.ts  useEdgeOperations.ts
(+10 files in other folders)
