[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "python-dotenv>=1.1.1",
    "flask-cors>=4.0.0",
    "neo4j==5.28.2",
    "neo4j-rust-ext==5.28.2.1",
    "pytz==2025.2",
    "typing-extensions==4.15.0",
]
